Revision history for Class-Refresh

{{$NEXT}}

0.03  2013-06-21
      - fix the case where reloading after a compilation error wouldn't work
        properly (Michael Reddick)

0.02  2011-04-10
      - whoops, can't use Sub::Exporter in tests

0.01  2011-04-06
      - Initial release