@@ -74,6 +74,11 @@ Returns a list of modules which have changed since the last call to C<refresh>.
 sub modified_modules {
     my $class = shift;
 
+    if (!%CACHE) {
+        $class->_update_cache_for($_) for keys %INC;
+        return;
+    }
+
     my @ret;
     for my $file (keys %CACHE) {
         # refresh files that are in our
@@ -89,6 +94,7 @@ sub modified_modules {
         }
         else {
             $class->_update_cache_for($file);
+            push @ret, $class->_file_to_mod($file);
         }
     }
 
