@@ -1,0 +1,7 @@
+package Foo;
+use strict;
+use warnings;
+
+sub bar { 1 }
+
+1;
