@@ -1,6 +1,8 @@
 Revision history for Class-Refresh
 
 {{$NEXT}}
+      - fix refreshing a module for the first time when it was first loaded
+        after the first call to refresh
 
 0.03  2013-06-21
       - fix the case where reloading after a compilation error wouldn't work
